terraform/examples/openshift/agent-server/onify-agent-dev-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: onify-agent-dev
  namespace: onify
spec:
  host: onify-agent-dev.onify.net
  to:
    kind: Service
    name: agent-server
    weight: 100
  port:
    targetPort: agent-server-http
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
        <cert>
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
        <cert>
      -----END PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
        <cert>
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
        <cert>
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
        <cert>
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: onify-agent-dev.onify.net
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
      wildcardPolicy: None
      routerCanonicalHostname: apps.ocp-prod-0.k8s.onify.net
